--- a/6/css/style.css
+++ b/6/css/style.css
@@ -496,6 +496,12 @@
         padding: 0 20px;
     }
 
+    .menu,
+    .line-width,
+    .footer {
+        margin: 0 -20px;
+    }
+
     .social-login {
         padding: 0;
     }
