--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import "../../node_modules/normalize.css/normalize";
+@import "hamburgers/hamburgers";
 
 $primary_color: #2574a9;
 $background_color: #fafafa;
@@ -29,20 +30,25 @@ img {
 
   /*
     Аватарка
-   */
+  */
 
   .author {
     width: 270px;
     margin-right: 30px;
     background: #FFFFFF;
     float: left;
+    box-shadow: 0 0 20px rgba(black, .1);
 
     @media screen and (max-width: 900px) {
-      width: 30%;
+      width: 20%;
     }
 
     @media screen and (max-width: 768px) {
       margin-right: 2%;
+    }
+
+    @media screen and (max-width: 600px) {
+      display: none;
     }
 
     &__description {
@@ -67,7 +73,7 @@ img {
 
     /*
         Ссылки на соцсети
-         */
+    */
 
     &__social {
       text-align: center;
@@ -105,16 +111,36 @@ img {
     Навигация
    */
 
+  .menu {
+    display: none;
+
+    @media screen and (max-width: 600px) {
+      display: block;
+      height: 48px;
+      background: $primary_color;
+      color: #FFFFFF;
+      position: relative;
+
+      &__item {
+        font-weight: 600;
+        letter-spacing: 2px;
+        position: absolute;
+        left: 70px;
+        top: 50%;
+        transform: translateY(-50%);
+        text-transform: uppercase;
+      }
+    }
+  }
+
   .navigation {
     background: #FFFFFF;
     text-align: center;
     display: flex;
+    box-shadow: 0 0 20px rgba(black, .1);
 
-    @media screen and (max-width: 768px) {
-      display: block;
-      float: left;
-      clear: both;
-      width: 30%;
+    @media screen and (max-width: 600px) {
+      text-align: left;
     }
 
     .navigation__list {
@@ -123,25 +149,43 @@ img {
       margin: 0;
       display: flex;
       width: 100%;
+      position: relative;
 
-      @media screen and (max-width: 768px) {
-        display: block;
+      @media screen and (max-width: 600px) {
+        display: none;
+        position: absolute;
+        width: 96%;
+        background: #FFFFFF;
       }
 
       li {
         width: 20%;
         border-right: 1px dashed $border_color;
 
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 600px) {
           border-right: none;
-          border-top: 1px dashed $border_color;
+          border-bottom: 1px dashed $border_color;
           width: 100%;
+          transition: background .3s ease;
+          
+          &:hover {
+            background: #eeeeee;
+          }
         }
 
         &:last-child {
           border-right: none;
+
+          @media screen and (max-width: 600px) {
+            border-bottom: none;
+          }
         }
       }
+    }
+
+    .dropdown {
+      display: block;
+      box-shadow: 0 2px 5px rgba(black, .1);
     }
 
     &__link {
@@ -154,10 +198,22 @@ img {
       }
 
       .navigation__item {
-        padding: 20% 0;
+        padding: 10% 0 20% 0;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
 
-        @media screen and (max-width: 768px){
-          padding: 10% 0;
+        @media screen and (max-width: 600px){
+          display: block;
+          padding: 0;
+          position: relative;
+
+          .navigation__item-text {
+            position: absolute;
+            top: 50%;
+            left: 70px;
+            transform: translateY(-50%);
+          }
         }
 
         .fa-user,
@@ -166,12 +222,18 @@ img {
         .fa-comments,
         .fa-map-marker {
           padding: 10%;
+          text-align: center;
+
+          @media screen and (max-width: 600px){
+            padding: 10px 20px;
+          }
         }
       }
     }
     
     .navigation__link_active {
       color: $primary_color;
+      cursor: default;
     }
   }
 
@@ -184,22 +246,24 @@ img {
     background: #FFFFFF;
     display: flex;
     flex-wrap: wrap;
+    box-shadow: 0 0 20px rgba(black, .1);
 
     @media screen and (max-width: 768px) {
-      margin-top: 0;
+      margin-top: 2%;
     }
 
     .content__title {
       font-size: 20px;
       color: $primary_color;
-      line-height: 75px;
+      line-height: 50px;
       padding-left: 25px;
+      padding-bottom: 10px;
       border-bottom: 1px dashed $border_color;
       width: 100%;
     }
 
     .content__about-me {
-      margin: 25px;
+      margin: 10px 25px;
       display: flex;
       width: 100%;
       flex-wrap: wrap;
