--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,6 +19,8 @@ img {
   max-width: 1170px;
   margin: 60px auto;
   box-sizing: border-box;
+  position: relative;
+  overflow: hidden;
 
   @media screen and (max-width: 1200px) {
     margin: 30px;
@@ -109,7 +111,7 @@ img {
 
   /*
     Навигация
-   */
+  */
 
   .menu {
     display: none;
@@ -120,6 +122,7 @@ img {
       background: $primary_color;
       color: #FFFFFF;
       position: relative;
+      z-index: 10;
 
       &:hover {
         cursor: pointer;
@@ -156,10 +159,10 @@ img {
       position: relative;
 
       @media screen and (max-width: 600px) {
-        display: none;
+        display: block;
         position: absolute;
-        width: 96%;
         background: #FFFFFF;
+        top: -100%;
       }
 
       li {
@@ -190,6 +193,9 @@ img {
     .dropdown {
       display: block;
       box-shadow: 0 2px 5px rgba(black, .1);
+      position: absolute;
+      top: 48px;
+      transition: all .4s ease;
     }
 
     &__link {
