--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -119,7 +119,7 @@ img {
       background: $primary_color;
       color: #FFFFFF;
       position: relative;
-      z-index: 10;
+      z-index: 300;
       transition: background .3s ease;
 
       &:hover {
@@ -202,6 +202,7 @@ img {
       position: absolute;
       top: 48px;
       transition: all .4s ease;
+      z-index: 200;
     }
 
     &__link {
@@ -408,6 +409,125 @@ img {
         flex: 1 1 100%;
         margin: 10px 0;
       }
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .certificate-check {
+      margin-top: 20px;
+      margin-bottom: 20px;
+
+      .check-link {
+        text-decoration: none;
+        color: $primary_color;
+
+        &:hover {
+          text-decoration: underline;
+        }
+
+        &:hover ~ .fa-arrow-right {
+          left: 5px;
+        }
+      }
+
+      .fa-arrow-right {
+        color: $primary_color;
+        position: relative;
+      }
+    }
+
+
+
+    .doing {
+      display: block;
+      width: 100%;
+      margin-top: 15px;
+      margin-bottom: 30px;
+      position: relative;
+      
+      .doing-icon {
+        background: $primary_color;
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        border-radius: 50%;
+        margin-left: 25px;
+        position: relative;
+        z-index: 10;
+
+        @media screen and (max-width: 300px){
+          margin-left: 10px;
+        }
+      }
+
+      .fa-graduation-cap,
+      .fa-suitcase {
+        color: #FFFFFF;
+        transform: translateY(100%);
+      }
+    }
+
+    .vertical-grey-line {
+      background: #e4e4e4;
+      width: 2px;
+      position: absolute;
+      left: 49px;
+
+      @media screen and (max-width: 300px){
+        left: 34px;
+      }
+    }
+
+    .vertical-grey-line_education-height {
+      height: calc(100% - 50px);
+    }
+
+    .doing__item {
+      margin-left: 75px;
+      margin-right: 5px;
+
+      @media screen and (max-width: 300px){
+        margin-left: 60px;
+      }
+
+      &:last-child {
+        position: relative;
+
+        &:before {
+          content: '';
+          background: #FFFFFF;
+          width: 2px;
+          height: 100%;
+          position: absolute;
+          left: -26px;
+          top: 4px;
+        }
+      }
+
+      .doing__subtitle-h2 {
+        margin-top: 30px;
+        font-size: 1.1rem;
+        position: relative;
+
+        &:before {
+          content: '';
+          width: 12px;
+          height: 12px;
+          border-radius: 50%;
+          background: $primary_color;
+          position: absolute;
+          left: -31px;
+          top: 4px;
+        }
+      }
+
+      .doing__subtitle-h3 {
+        margin-top: 10px;
+        font-size: 1rem;
+        color: $primary_color;
+      }
     }
   }
 
@@ -430,5 +550,32 @@ img {
       color: #b4b4b4;
       margin: 25px;
     }
+  }
+
+  .modal {
+    width: 60%;
+    border-radius: 5px;
+    background: #fff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
+    opacity: 1;
+    z-index: 100;
+    padding: 20px;
+  }
+
+  .overlay {
+    z-index: 50;
+    position: fixed;
+    background-color: #000;
+    opacity: .8;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    display: none;
   }
 }
