--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -553,7 +553,7 @@ img {
   }
 
   .modal {
-    width: 60%;
+    width: 800px;
     border-radius: 5px;
     background: #fff;
     position: fixed;
