Фикс навигации для фокса

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -238,7 +238,7 @@ img {
         .fa-suitcase,
         .fa-comments,
         .fa-map-marker {
-          padding: 10%;
+          padding: 20px;
           text-align: center;
 
           @media screen and (max-width: 600px){
